Fix weird font size bug on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -22,6 +22,10 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 #top-grid {
